# Drone-Programming

./: .gitmodules  Practice_Module_2.ipynb  README.md
CPP/DP_CPP_Lesson5_7/: CMakeLists.txt  main.cpp
CPP/DP_CPP_Lesson6_5/: CMakeLists.txt
CPP/DP_CPP_Lesson7_6/lib/: CMakeLists.txt
CPP/DP_CPP_Lesson7_6/lib/src/: export.h  matrix.cpp  matrix.h
CPP/DP_CPP_Lesson7_6/lib/src/c/: c_api.cpp  c_api.h
CPP/DP_CPP_Lesson7_6/ubexe/: CMakeLists.txt
CPP/DP_CPP_Lesson7_6/ubexe/src/: main.cpp
CPP/DP_CPP_Lesson8_8/SnakeGame/: CMakeLists.txt  README.md  main.cpp  snake.cpp  snake.h
Linux5_DockerStart/: Dockerfile  README.md  docker-compose.yml  docker_ini.py  lesson 5
Math_for_roboteer/MFR02_base/: Практическая_работа_к_модулю_2.ipynb
Math_for_roboteer/MFR03_base/: Практическая_работа_к_модулю_3.ipynb
Math_for_roboteer/MFR04_base/: ПР_М4.ipynb
Math_for_roboteer/MFR05_base/: ПР_М5.ipynb
Math_for_roboteer/MFR06_base/: ПР_М6.ipynb
Python1_Start/: Module1_Practice.ipynb
Python1_Start/.ipynb_checkpoints/: task2_8-checkpoint.ipynb
Python2_AdvancedFeatures/: .~lock.activity.csv#
Python2_AdvancedFeatures/.ipynb_checkpoints/: Practice_Module_2-checkpoint.ipynb
Python3_Сalc_in_Python/: Practice_Module_3.ipynb
Python3_Сalc_in_Python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Python4_Visualisation/: горох.csv
Python5_Analysis/: Practice_Module_5.ipynb  ls.txt  stats.csv  taxis.sqlite3  taxis_cleaned.sqlite3
Python5_Analysis/.ipynb_checkpoints/: Lab_Practice_Module_5-checkpoint.ipynb  copy of world-data-2023-checkpoint.csv
Python6_OS&equipment/: Lab_Practice_Module_6_.ipynb  paths.txt  Сities.html
Python6_OS&equipment/folder_1/: file_1.txt  file_2.txt  file_3.txt
Python6_OS&equipment/folder_1_1/: file_1.txt  file_2.txt  file_3.txt
Python6_OS&equipment/folder_1_2/: file_1.txt
Python6_OS&equipment/folder_1_2_1/: file_1.txt  file_2.txt  file_3.txt
Python6_OS&equipment/folder_1_2_2/: file_1.txt  file_3.txt
Python6_OS&equipment/folder_2/: file_3.txt
Python6_OS&equipment/folder_2_1/: file_1.txt  file_2.txt  file_3.txt
Python6_OS&equipment/folder_3/: file_1.txt
Python6_OS&equipment/folder_3_1/: file_2.txt
Python6_OS&equipment/folder_3_1_1/: file_2.txt  file_3.txt
Python6_OS&equipment/folder_3_2/: file_3.txt
Python6_OS&equipment/folder_3_2_1/: file_1.txt  file_2.txt  file_3.txt
Python6_OS&equipment/folder_3_2_2/: file_2.txt  file_3.txt
Python6_OS&equipment/main/: file_1.txt  file_3.txt
Python_for_Engineer/Python3_Сalc_in_Python/: 1 model.ipynb  Copy_of_Practice_Module_3_Lab.ipynb
UAV_programming/UAVP_pw4.7/: README.md  (+1 more)
(+60 files in other folders)
